--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -1,4 +1,4 @@
-name: Compile Latex
+name: Compile LaTeX
 
 on:
   push:
@@ -7,14 +7,16 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  job:
+    permissions:
+      contents: write
   
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Comile LaTeX document
+    - name: Compile LaTeX document
       uses: xu-cheng/latex-action@v3
       with:
         root_file: main.tex
@@ -24,4 +26,12 @@ jobs:
       with:
         name: PDF
         path: main.pdf
+
+    - name: Remove all files except PDF file
+      run: find . ! -name 'main.pdf' -type f -delete
+
+    - uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: Update PDF
+        branch: pdf
     
