--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -12,14 +12,14 @@ jobs:
       contents: write
   
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/sarisia/texlive:2019
 
     steps:
     - uses: actions/checkout@v4
 
     - name: Compile LaTeX document
-      run: latexmk -interaction=nonstopmode -pdf main.tex
+      uses: xu-cheng/latex-action@v3
+      with:
+        root_file: main.tex
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
