--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -32,6 +32,8 @@ jobs:
         cp main.pdf /tmp
         git checkout --orphan pdf && rm -rf * || git switch pdf
         mv /tmp/main.pdf .
+        git config user.name 'github-actions[bot]'
+        git config user.email 'github-actions[bot]@users.noreply.github.com'
         git add .
         git commit -m "Update PDF"
         git push -u origin pdf
