--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Update PDF branch
       run: |
-        git checkout --orphan pdf && find . -type f \( -path ".git/*" -o -path "main.tex" \) -prune -o -delete || git switch PDF
+        git checkout --orphan pdf && find . -type f \( -path ".git/*" -o -path "main.tex" \) -prune -o -exec rm -rf {} + || git switch PDF
         git config user.name 'github-actions[bot]'
         git config user.email 'github-actions[bot]@users.noreply.github.com'
         git add .
