--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Update PDF branch
       run: |
-        git checkout --orphan pdf && find . -mindepth 1 ! -path './main.tex' ! -path './.git/*' ! -path './.git' -delete || git switch PDF
+        git checkout --orphan PDF && find . -mindepth 1 ! -path './main.tex' ! -path './.git/*' ! -path './.git' -delete || git switch PDF
         git config user.name 'github-actions[bot]'
         git config user.email 'github-actions[bot]@users.noreply.github.com'
         git add .
