--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Update PDF branch
       run: |
         git checkout --orphan PDF && find . -mindepth 1 ! -path './main.pdf' ! -path './.git/*' ! -path './.git' -delete || git switch PDF
+        mv main.pdf 'I2 Grimore.pdf'
         git config user.name 'github-actions[bot]'
         git config user.email 'github-actions[bot]@users.noreply.github.com'
         git add .
