--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
 
+## Main document
+/main.pdf
+
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bbl-SAVE-ERROR
