--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - uses: wtfjoke/setup-tectonic@v3
     
     - name: Run Tectonic
       run: tectonic main.tex
