--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -18,8 +18,33 @@ jobs:
 
     - uses: wtfjoke/setup-tectonic@v3
     
-    - name: Run Tectonic
+    - name: Build main document
       run: tectonic main.tex
+
+    - name: Build CV unit
+      run: |
+        sed -e 's/{{unit}}/cv/g;s/{{UNIT}}/COMPUTER VISION/g' unit_template.tex > cv_unit.tex
+        tectonic cv_unit.tex
+
+    - name: Build DL unit
+      run: |
+        sed -e 's/{{unit}}/dl/g;s/{{UNIT}}/DEEP LEARNING/g' unit_template.tex > dl_unit.tex
+        tectonic dl_unit.tex
+
+    - name: Build LM unit
+      run: |
+        sed -e 's/{{unit}}/lm/g;s/{{UNIT}}/LANGUAGE MODELING/g' unit_template.tex > lm_unit.tex
+        tectonic lm_unit.tex
+
+    - name: Build ML unit
+      run: |
+        sed -e 's/{{unit}}/ml/g;s/{{UNIT}}/MACHINE LEARNING/g' unit_template.tex > ml_unit.tex
+        tectonic ml_unit.tex
+
+    - name: Build RL unit
+      run: |
+        sed -e 's/{{unit}}/rl/g;s/{{UNIT}}/REINFORCEMENT LEARNING/g' unit_template.tex > rl_unit.tex
+        tectonic rl_unit.tex
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
@@ -30,7 +55,7 @@ jobs:
     - name: Update PDF branch
       run: |
         # Move the PDF to a temporary location
-        mv main.pdf /tmp
+        mv main.pdf cv_unit.pdf dl_unit.pdf lm_unit.pdf ml_unit.pdf rl_unit.pdf /tmp
         
         # Configure git credentials
         git config user.name 'github-actions[bot]'
@@ -50,7 +75,15 @@ jobs:
           git rm -rf .
         fi
         
+        # copy pdfs over
         cp /tmp/main.pdf 'I2 Grimoire.pdf'
+        # copy each unit
+        mkdir units
+        cp /tmp/cv_unit.pdf './units/Computer Vision.pdf'
+        cp /tmp/dl_unit.pdf './units/Deep Learning.pdf'
+        cp /tmp/lm_unit.pdf './units/Language Modeling.pdf'
+        cp /tmp/ml_unit.pdf './units/Machine Learning.pdf'
+        cp /tmp/rl_unit.pdf './units/Reinforcement Learning.pdf'
         
         # Add and commit changes
         git add 'I2 Grimoire.pdf'
