--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -136,6 +136,7 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    needs: LaTeX
     steps:
       - name: Checkout
         uses: actions/checkout@v4
