--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -37,11 +37,64 @@ jobs:
         sed -e 's/{{unit}}/rl/g;s/{{UNIT}}/REINFORCEMENT LEARNING/g' unit_template.tex > rl_unit.tex
         parallel tectonic {} ::: cv_unit.tex dl_unit.tex lm_unit.tex ml_unit.tex rl_unit.tex
 
-    - name: Upload artifact
+    - name: Upload pdf
       uses: actions/upload-artifact@v4
       with:
         name: PDF
         path: main.pdf
+
+    - name: Convert latex to markdown
+      uses: pandoc/actions@v1.2.0
+      run: |
+        sudo apt-get update && sudo apt-get install -y pandoc
+        # note: we reuse file_unit.tex as we don't need it anymore
+        sed -e 's/{{unit}}/cv/g' md_template.tex > cv_unit.tex
+        sed -e 's/{{unit}}/dl/g' md_template.tex > dl_unit.tex
+        sed -e 's/{{unit}}/lm/g' md_template.tex > lm_unit.tex
+        sed -e 's/{{unit}}/ml/g' md_template.tex > ml_unit.tex
+        sed -e 's/{{unit}}/rl/g' md_template.tex > cv_unit.tex
+        parallel pandoc --lua-filter=liquid_divs.lua -o {}.md {} ::: cv_unit.tex dl_unit.tex lm_unit.tex ml_unit.tex rl_unit.tex
+        # Add header to each file
+        sed -i -e '1i\
+        ---
+        layout: page\
+        title: Computer Vision\
+        permalink: /cv\
+        nav_order: 3\
+        description: Computer Vision Unit\
+        ---' cv_unit.md
+        sed -i -e '1i\
+        ---
+        layout: page\
+        title: Deep Learning\
+        permalink: /ml\
+        nav_order: 2\
+        description: Deep Learning Unit\
+        ---' dl_unit.md
+        sed -i -e '1i\
+        ---
+        layout: page\
+        title: Lanuguage Modeling\
+        permalink: /lm\
+        nav_order: 4\
+        description: Language Modeling Unit\
+        ---' ml_unit.md
+        sed -i -e '1i\
+        ---
+        layout: page\
+        title: Machine Learning\
+        permalink: /ml\
+        nav_order: 1\
+        description: Machine Learning Unit\
+        ---' ml_unit.md
+        sed -i -e '1i\
+        ---
+        layout: page\
+        title: Reinforcement Learning\
+        permalink: /ml\
+        nav_order: 5\
+        description: Reinforcement Learning Unit\
+        ---' rl_unit.md
 
     - name: Fetch Just the docs theme
       run: git clone https://github.com/just-the-docs/just-the-docs-template /tmp/just-the-docs
@@ -50,6 +103,9 @@ jobs:
       run: |
         # Move the PDF to a temporary location
         mv main.pdf cv_unit.pdf dl_unit.pdf lm_unit.pdf ml_unit.pdf rl_unit.pdf /tmp
+        mkdir /tmp/docs
+        mv cv_unit.md dl_unit.md lm_unit.md ml_unit.md rl_unit.md /tmp/docs
+        cp cv dl ml lm other rl /tmp/docs
 
         # Remove generated tex files
         rm cv_unit.tex dl_unit.tex lm_unit.tex ml_unit.tex rl_unit.tex
@@ -93,6 +149,7 @@ jobs:
         title: I2 Grimoire
         description: The I2 textbook on Artificial Intelligence
         theme: just-the-docs
+        latex: mathjax
 
         url: https://grimoire.uw-i2.org
 
@@ -122,6 +179,9 @@ jobs:
         {% endfor %}
         </ul>
         EOF
+
+        # Copy over pages
+        cp -r /tmp/docs .
         
         # Add and commit changes
         git add .
