fix: inline math

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -143,19 +143,21 @@ jobs:
           {% endif %}
         {% endfor %}
         </ul>
+
+        ## NEW: Experimental web version
+        {:toc}
         EOF
 
         # Mathjax rendering
         cat << EOF > _includes/head_custom.html
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
         <script>
         window.MathJax = {
           tex: {
-            macros: {
-              // Ignore parbox
-              parbox: ["#2", 2]
-            }
+            // macros: {
+            //   // Ignore parbox
+            //   parbox: ["#2", 2]
+            // },
             inlineMath: {'[+]': [['$', '$']]}
           }
         };
