--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -148,20 +148,28 @@ jobs:
         Use the navigation bar to explore the experimental web version
         EOF
 
-        # Mathjax rendering, ignore parbox
+        # styles and mathjax rendering, ignore parbox
         cat << EOF > _includes/head_custom.html
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
         <script>
+        <style>
+        .questionbox {
+          background-color: #e3ddfc;
+          border-radius: 4px;
+          border-left: 4px solid #381885;
+          padding: 16px;
+          margin: 16px 0;
+        }
+        </style>
         window.MathJax = {
           tex: {
             macros: {
               parbox: ["#2", 2]
             },
-            inlineMath: [['$', '$']],
-            processEscapes: true
+            inlineMath: [['$','$']],
           }
         };
         </script>
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         EOF
 
         # Copy over pages
