fix: Add another backslash to escape kramdown

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -165,7 +165,7 @@ jobs:
             macros: {
               parbox: ["#2", 2]
             },
-            inlineMath: {'[+]': [['$', '$'], ['\\(', '\\)']]},
+            inlineMath: {'[+]': [['$', '$'], ['\\\(', '\\\)']]},
             processEscapes: true,
           }
         };
