fix: try disabling tables

--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -56,10 +56,10 @@ jobs:
         parallel pandoc --lua-filter=liquid_divs.lua -o {}.md {}.tex ::: cv_unit dl_unit lm_unit ml_unit rl_unit
         # Add header to each file
         sed -i -e '1i---\nlayout: page\ntitle: Machine Learning\npermalink: /ml\nnav_order: 2\ndescription: Machine Learning Unit\n---' ml_unit.md
-        sed -i -e '1i---\nlayout: page\ntitle: Deep Learning\npermalink: /ml\nnav_order: 3\ndescription: Deep Learning Unit\n---' dl_unit.md
+        sed -i -e '1i---\nlayout: page\ntitle: Deep Learning\npermalink: /dl\nnav_order: 3\ndescription: Deep Learning Unit\n---' dl_unit.md
         sed -i -e '1i---\nlayout: page\ntitle: Computer Vision\npermalink: /cv\nnav_order: 4\ndescription: Computer Vision Unit\n---' cv_unit.md
         sed -i -e '1i---\nlayout: page\ntitle: Language Modeling\npermalink: /lm\nnav_order: 5\ndescription: Language Modeling Unit\n---' lm_unit.md
-        sed -i -e '1i---\nlayout: page\ntitle: Reinforcement Learning\npermalink: /ml\nnav_order: 6\ndescription: Reinforcement Learning Unit\ ---' rl_unit.md
+        sed -i -e '1i---\nlayout: page\ntitle: Reinforcement Learning\npermalink: /rl\nnav_order: 6\ndescription: Reinforcement Learning Unit\ ---' rl_unit.md
 
     - name: Fetch Just the docs theme
       run: git clone https://github.com/just-the-docs/just-the-docs-template /tmp/just-the-docs
@@ -122,6 +122,9 @@ jobs:
           Intro Course: https://course.uw-i2.org
           
         search_enabled: false
+
+        kramdown:
+          table_extension: false
         EOF
 
         cat << EOF > index.md
