--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -59,7 +59,7 @@ jobs:
         sed -i -e '1i---\nlayout: page\ntitle: Deep Learning\npermalink: /dl\nnav_order: 3\ndescription: Deep Learning Unit\n---' dl_unit.md
         sed -i -e '1i---\nlayout: page\ntitle: Computer Vision\npermalink: /cv\nnav_order: 4\ndescription: Computer Vision Unit\n---' cv_unit.md
         sed -i -e '1i---\nlayout: page\ntitle: Language Modeling\npermalink: /lm\nnav_order: 5\ndescription: Language Modeling Unit\n---' lm_unit.md
-        sed -i -e '1i---\nlayout: page\ntitle: Reinforcement Learning\npermalink: /rl\nnav_order: 6\ndescription: Reinforcement Learning Unit\ ---' rl_unit.md
+        sed -i -e '1i---\nlayout: page\ntitle: Reinforcement Learning\npermalink: /rl\nnav_order: 6\ndescription: Reinforcement Learning Unit\n---' rl_unit.md
 
     - name: Fetch Just the docs theme
       run: git clone https://github.com/just-the-docs/just-the-docs-template /tmp/just-the-docs
