--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -148,7 +148,7 @@ jobs:
         </ul>
 
         ## NEW: Experimental web version
-        Use the navigation bar to explore the experimental web version
+        Use the navigation bar to browse the experimental web version
         EOF
 
         # styles and mathjax rendering, ignore parbox
