--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -43,13 +43,16 @@ jobs:
         name: PDF
         path: main.pdf
 
+    - name: Install pandoc
+      uses: pandoc/actions/setup@v1
+      with:
+        version: 3.7
+
     - name: Convert latex to markdown
       run: |
-        # Get pandoc
-        sudo apt-get install -y pandoc
         # Get pandoc crossref
         cd $(mktemp -d)
-        wget -c https://github.com/lierdakil/pandoc-crossref/releases/latest/download/pandoc-crossref-Linux-X64.tar.xz
+        wget -c https://github.com/lierdakil/pandoc-crossref/releases/download/v0.3.20/pandoc-crossref-Linux-X64.tar.xz
         tar -xf pandoc-crossref-Linux-X64.tar.xz
         sudo mv pandoc-crossref /usr/local/bin/
         sudo chmod a+x /usr/local/bin/pandoc-crossref
@@ -76,8 +79,8 @@ jobs:
       run: |
         # Move the PDF to a temporary location
         mv main.pdf cv_unit.pdf dl_unit.pdf lm_unit.pdf ml_unit.pdf rl_unit.pdf /tmp
-        mkdir /tmp/docs /tmp/assets
-        mv cv_unit.md dl_unit.md lm_unit.md ml_unit.md rl_unit.md /tmp/docs
+        mkdir /tmp/pages /tmp/assets
+        mv cv_unit.md dl_unit.md lm_unit.md ml_unit.md rl_unit.md /tmp/pages
         cp -r cv dl ml lm other rl /tmp/assets
 
         # Remove generated tex files
