--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -173,7 +173,7 @@ jobs:
           background-color: #e3ddfc;
           border-radius: 4px;
           border-left: 4px solid #381885;
-          padding: 16px;
+          padding: 0.5em 1em;
           margin: 16px 0;
         }
         </style>
