--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -70,7 +70,7 @@ jobs:
         sed -e 's/{{unit}}/ml/g' md_template.tex > ml_unit.tex
         sed -e 's/{{unit}}/rl/g' md_template.tex > rl_unit.tex
         echo 'Running Pandoc...'
-        parallel pandoc --filter pandoc-crossref --lua-filter=liquid_divs.lua -o {}.md {}.tex ::: cv_unit dl_unit lm_unit ml_unit rl_unit
+        parallel pandoc --filter pandoc-crossref --lua-filter=filters.lua -o {}.md {}.tex ::: cv_unit dl_unit lm_unit ml_unit rl_unit
         # Add header to each file
         sed -i -e '1i---\nlayout: page\ntitle: Machine Learning\npermalink: /ml\nnav_order: 2\ndescription: Machine Learning Unit\n---' ml_unit.md
         sed -i -e '1i---\nlayout: page\ntitle: Deep Learning\npermalink: /dl\nnav_order: 3\ndescription: Deep Learning Unit\n---' dl_unit.md
